--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ languageCode = "zh-CN"
 # 是否包括中日韩文字
 hasCJKLanguage = true
 # 网站标题
-title = "kiwiwi"
+title = "kiwi4814's xiaopozhan"
 
 # 更改使用 Hugo 构建网站时使用的默认主题
 theme = "LoveIt"
