--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://kiwi4814.com"
+baseURL = "https://kiwi4814.github.io/"
 # [en, zh-cn, fr, ...] 设置默认的语言
 defaultContentLanguage = "zh-cn"
 # 网站语言, 仅在这里 CN 大写
@@ -6,7 +6,11 @@ languageCode = "zh-CN"
 # 是否包括中日韩文字
 hasCJKLanguage = true
 # 网站标题
-title = "kiwi4814's xiaopozhan"
+title = "kiwi-iwik"
+# 版权信息（支持 Markdown）
+copyright = "在保留本文作者及本文链接的前提下，非商业用途随意转载分享。"
+# 是否启用 Git 版本信息
+enableGitInfo = true
 
 # 更改使用 Hugo 构建网站时使用的默认主题
 theme = "LoveIt"
@@ -43,6 +47,7 @@ theme = "LoveIt"
     url = "/categories/"
     title = ""
     weight = 3
+
 
 # Hugo 解析文档的配置
 [markup]
