--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,8 +26,8 @@ jobs:
       # 创建 CNAME，这个是原始配置中没有的
       - uses: "finnp/create-file-action@master"
         env:
-          FILE_NAME: "./CNAME"
-          FILE_DATA: "kiwi4814.me"
+          FILE_NAME: "CNAME1"
+          FILE_DATA: "kiwi4814.com"
           
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3	# 一个自动发布github pages的action
