--- a/content/.obsidian/workspace
+++ b/content/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "3ba516761ef36449",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "posts/2021/WSL安装oh-my-posh踩坑记录.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -65,6 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "posts/2021/WSL安装oh-my-posh踩坑记录.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,15 +89,15 @@
   },
   "active": "3ba516761ef36449",
   "lastOpenFiles": [
+    "posts/2021/WSL安装oh-my-posh踩坑记录.md",
+    "posts/2021/Windows软件不完全推荐03—工具篇.md",
+    "posts/2021/Windows软件不完全推荐02—办公篇.md",
+    "posts/2021/windows软件不完全推荐01—常用篇.md",
+    "posts/2020/Java数组All elements are null异常.md",
+    "posts/2022/从零开始搭建个人博客（1） - 准备工作.md",
     "posts/2022/Hugo+Gihub Pages搭建个人博客.md",
     "posts/2019/Camunda流程引擎简介及功能拓展.md",
     "posts/2019/Homebrew卡在 Updating Homebrew 的解决方法.md",
-    "posts/2019/Java和Javascript去除字符串空格的方法.md",
-    "posts/2019/介绍几种分号的不同写法.md",
-    "posts/2019/获取YYYY-MM-dd所在月份的最后一天.md",
-    "posts/archive/Camunda流程引擎简介及功能拓展.md",
-    "posts/archive/CentOS 7离线安装MySQL 5.7.md",
-    "posts/archive/如何在MySQL中设计一个树形存储结构？.md",
-    "posts/archive/介绍几种分号的不同写法.md"
+    "posts/2019/Java和Javascript去除字符串空格的方法.md"
   ]
 }
