apifox/postman预执行脚本原理及设置

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .obsidian/workspace
 .obsidian/plugins/recent-files-obsidian/data.json
+.obsidian/plugins/obsidian-hypothesis-plugin/data.json
+.idea
