--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,10 +24,10 @@ jobs:
         run: hugo --minify	# 使用hugo构建静态网页
         
       # 创建 CNAME，这个是原始配置中没有的
-      #- uses: "finnp/create-file-action@master"
-      #  env:
-      #    FILE_NAME: "./public/CNAME1"
-      #    FILE_DATA: "kiwi4814.com"
+      - uses: "finnp/create-file-action@master"
+        env:
+          FILE_NAME: "./public/CNAME1"
+          FILE_DATA: "kiwi4814.github.io"
           
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3	# 一个自动发布github pages的action
