--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -76,7 +76,7 @@
 #     weight = 1
 #     pre = "internal"
 # [[home]]
-#     url = "https://kiwi4814.com/"
+#     url = "https://kiwi4814.github.io/"
 #     name = "Telegram"
 #     weight = 2
 #     pre = "external"
